project_fast_api_kubernetes/fraud-detection-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-app-service
  labels:
    app: fraud-detection-app
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: fraud-detection-app
