project_fast_api_kubernetes/fraud-detection-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-detection-app-ingress
spec:
  defaultBackend:
    service:
      name: fraud-detection-app-service
      port:
        number: 8001
